--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "description": "popExcelApi is a very simple and easy to expand excel API for extracting data column by column", 
     "keywords": ["PHP","Class", "API", "EXCEL", "CSV"], 
     "license":"MIT",
+    "version":"1.1",
     "authors":[
         {
             "name": "Hini Majesty", 
