--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {   
     "name": "hinimajesty/pop-excel-api",
-    "type": "class level API", 
+    "type": "library", 
     "description": "popExcelApi is a very simple and easy to expand excel API for extracting data column by column", 
     "keywords": ["PHP","Class", "API", "EXCEL", "CSV"], 
     "license":"MIT",
